// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sea creatures Reducing creatures groups by type 1`] = `
{
  "crustacean": [
    {
      "deadly": true,
      "emoji": "🦐",
      "type": "crustacean",
    },
    {
      "deadly": false,
      "emoji": "🦀",
      "type": "crustacean",
    },
  ],
  "fish": [
    {
      "deadly": false,
      "emoji": "🐡",
      "type": "fish",
    },
    {
      "deadly": false,
      "emoji": "🐠",
      "type": "fish",
    },
  ],
  "shark": [
    {
      "deadly": false,
      "emoji": "🦈",
      "type": "shark",
    },
  ],
}
`;

exports[`Sea creatures Reducing creatures groups creatures in a map per type 1`] = `
Map {
  "crustacean" => [
    {
      "deadly": true,
      "emoji": "🦐",
      "type": "crustacean",
    },
    {
      "deadly": false,
      "emoji": "🦀",
      "type": "crustacean",
    },
  ],
  "fish" => [
    {
      "deadly": false,
      "emoji": "🐡",
      "type": "fish",
    },
    {
      "deadly": false,
      "emoji": "🐠",
      "type": "fish",
    },
  ],
  "shark" => [
    {
      "deadly": false,
      "emoji": "🦈",
      "type": "shark",
    },
  ],
}
`;

exports[`Sea creatures With more TS types groups an object 1`] = `
{
  "crustacean": [
    {
      "deadly": true,
      "emoji": "🦐",
      "name": "shrimp",
      "type": "crustacean",
    },
  ],
  "fish": [
    {
      "deadly": false,
      "emoji": "🐡",
      "name": "blowfish",
      "type": "fish",
    },
  ],
  "shark": [],
}
`;

exports[`Sea creatures With more TS types groups by known type 1`] = `
{
  "crustacean": [
    {
      "deadly": true,
      "emoji": "🦐",
      "type": "crustacean",
    },
    {
      "deadly": false,
      "emoji": "🦀",
      "type": "crustacean",
    },
  ],
  "fish": [
    {
      "deadly": false,
      "emoji": "🐡",
      "type": "fish",
    },
    {
      "deadly": false,
      "emoji": "🐠",
      "type": "fish",
    },
  ],
  "shark": [
    {
      "deadly": false,
      "emoji": "🦈",
      "type": "shark",
    },
  ],
}
`;

exports[`Sea creatures With more TS types groups from a known group 1`] = `
{
  "crustacean": [
    {
      "deadly": true,
      "emoji": "🦐",
      "type": "crustacean",
    },
    {
      "deadly": false,
      "emoji": "🦀",
      "type": "crustacean",
    },
  ],
  "fish": [
    {
      "deadly": false,
      "emoji": "🐡",
      "type": "fish",
    },
    {
      "deadly": false,
      "emoji": "🐠",
      "type": "fish",
    },
  ],
  "shark": [
    {
      "deadly": false,
      "emoji": "🦈",
      "type": "shark",
    },
  ],
}
`;
